Bug 389697 - Calling the elisa binary while it's also running makes it crash
Summary: Calling the elisa binary while it's also running makes it crash
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-31 15:08 UTC by Diego Gangl
Modified: 2018-01-31 22:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Gangl 2018-01-31 15:08:14 UTC
Running elisa and then trying to run another instance makes the first elisa crash (and the second one never start). 

This is what I get when trying to run another instance:
---
"Message recipient disconnected from message bus without replying"
---


This is what the original instance prints when it dies:

---
AbstractFileListing::emitNewFiles 501
AbstractFileListing::emitNewFiles 501
AbstractFileListing::emitNewFiles 501
AbstractFileListing::emitNewFiles 454
ASSERT: "!isEmpty()" in file /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h, line 351
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = elisa path = /home/januz/code/Elisa Music Player/build/src pid = 9107
KCrash: Arguments: /home/januz/code/Elisa Music Player/build/src/elisa 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0
pa_write() failed while trying to wake up the mainloop: Bad file descriptor
pa_write() failed while trying to wake up the mainloop: Bad file descriptor
pa_write() failed while trying to wake up the mainloop: Bad file descriptor
Invalid write to eventfd: Bad file descriptor
Code should not be reached at pulsecore/fdsem.c:199, function pa_fdsem_post(). Aborting.
Unable to start Dr. Konqi
----
Comment 1 Matthieu Gallien 2018-01-31 15:15:47 UTC
I confirm this bug and will try to solve it today.
Comment 2 Matthieu Gallien 2018-01-31 16:28:38 UTC
Git commit b0fb6b07dad122252c32469b71f09eed559797bf by Matthieu Gallien.
Committed on 31/01/2018 at 16:25.
Pushed by mgallien into branch 'master'.

avoid crashing when invoked from dbus without a valid list of files to open

M  +4    -2    src/elisaapplication.cpp

https://commits.kde.org/elisa/b0fb6b07dad122252c32469b71f09eed559797bf
Comment 3 Diego Gangl 2018-01-31 22:33:40 UTC
Thanks! I can confirm it's fixed