avoid crashing when invoked from dbus without a valid list of files to open

BUG: 389697